[package]
name = "quantum-werewolf"
version = "0.2.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[lib]
name = "quantum_werewolf"
path = "src/lib.rs"

[[bin]]
name = "qww"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
rand = "*"
serde = "1"
serde_derive = "1"
