[package]
name = "quantum-werewolf"
version = "0.2.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[profile.release]
lto = true
strip = true

[lib]
name = "quantum_werewolf"
path = "src/lib.rs"

[[bin]]
name = "qww"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
